tests/vendor/valid/trivial/precedence_5.c
//expect 1
//tags: trivial, binary, logical, precedence
int main() {
    return 2 == 2 || 0;
}