tests/vendor/invalid/syntax/missing_semicolon_2.c
//tags: trivial, binary, logical
int main() {
    return 1 || 2
}